--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>OnTheMove Software - Dev Links</title>
+
+        <!-- BRING IN FONT AWESOME FOR THE COOL ICONS -->
         <link
             rel="stylesheet"
             href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
@@ -11,63 +13,45 @@
             crossorigin="anonymous"
         />
 
+        <!-- VERY LITTLE STYLING - DEAL WITH IN IN THE HEAD -->
         <style>
+            :root {
+                --background-color: #f4f4f4;
+                --divider-color: #25b3e3;
+                --external-color-atlassian: #1a52cc;
+                --extension-width: 350px;
+            }
+            /* BASIC REST && EXTENSION SIZING*/
             html,
             body {
-                font-size: 14px;
+                width: var(--extension-width);
                 margin: 0;
-                min-height: 180px;
                 padding: 0;
-                width: 384px;
             }
 
-            h1 {
-                font-size: 22px;
-                font-weight: 400;
-                margin: 0;
-                color: #1a52cc;
-            }
-
-            a:link,
-            a:visited {
-                color: #000000;
-                outline: 0;
-                text-decoration: none;
-            }
-
-            img {
-                width: 150px;
-            }
-
-            .modal-header {
+            /* HEAD */
+            .ext-head {
                 align-items: center;
-
                 padding: 1rem;
                 width: 100%;
-                background-color: #f4f4f4;
-            }
-
-            .modal-content {
-                padding: 0 22px;
-            }
-
-            .modal-icon {
-                border-top: 2px solid #25b3e3;
-                height: 50px;
-                width: 100%;
-                padding: 1rem;
-                background: #f4f4f4;
-                height: 100%;
-            }
-
-            .logo {
-                padding: 16px;
+                background-color: var(--background-color);
                 text-align: center;
             }
 
-            .logo-icon {
+            .ext-onthemove-logo-icon {
                 vertical-align: text-bottom;
                 margin-right: 12px;
+                width: 200px;
+            }
+
+            /* BODY */
+            .ext-body {
+                border-top: 2px solid var(--divider-color);
+                height: 50px;
+                width: 100%;
+                padding: 1rem;
+                background-color: var(--background-color);
+                height: 100%;
             }
 
             .flex-container {
@@ -89,22 +73,24 @@
 
             .flex .fab {
                 font-size: 40px;
-                color: #1a52cc;
+                color: var(--external-color-atlassian);
             }
         </style>
     </head>
     <body>
-        <div class="modal-header">
-            <h1 class="logo">
+        <!-- TOP PART - OTM LOGO -->
+        <div class="ext-head">
+            <a href="https://onthemovesw.com">
                 <img
                     src="img/logo.png"
                     alt="OnTheMove Software"
-                    class="logo-icon"
+                    class="ext-onthemove-logo-icon"
                 />
-            </h1>
+            </a>
         </div>
 
-        <div class="modal-icon">
+        <!-- BOTTOM PART - LINKS VIA ICONS -->
+        <div class="ext-body">
             <div class="flex-container">
                 <div class="flex">
                     <a
@@ -125,6 +111,16 @@
                         href="https://bitbucket.org/onthemovesoftware/"
                         target="_blank"
                         ><i class="fab fa-bitbucket"></i>
+                    </a>
+                </div>
+                <div class="flex">
+                    <a href="http://18.219.34.107:81/login.html" target="_blank"
+                        ><img
+                            src="/img/teamcity.png"
+                            alt="OnTheMove TeamCity"
+                            width="40px"
+                            height="40px"
+                        />
                     </a>
                 </div>
             </div>
