--- a/popup.html
+++ b/popup.html
@@ -116,7 +116,7 @@
                 <div class="flex">
                     <a href="http://18.219.34.107:81/login.html" target="_blank"
                         ><img
-                            src="/img/teamcity.png"
+                            src="./img/teamcity.png"
                             alt="OnTheMove TeamCity"
                             width="40px"
                             height="40px"
